--- a/MapEditer/MapEditer.vcxproj.filters
+++ b/MapEditer/MapEditer.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="PropertiesWnd.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="comlib.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MapEditer.cpp">
@@ -84,6 +87,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="PropertiesWnd.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="comlib.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
