--- a/MapEditer/MapEditer.vcxproj.filters
+++ b/MapEditer/MapEditer.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="comlib.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="DlgAddMonster.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MapEditer.cpp">
@@ -90,6 +93,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="comlib.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DlgAddMonster.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
